--- a/Views/Livro/Index.cshtml
+++ b/Views/Livro/Index.cshtml
@@ -28,8 +28,8 @@
                 <tr>
                     <td data-cell="titulo">@livro.Nome</td>
                     <td data-cell="reservado">@(ViewBag.LivrosComReserva.ConteinsKey(livro.LivroID)? "sim": "nao") </td>
-                    <td data-cell="data devol.">@(ViewBag.LivrosComReserva.ConteinsKey(livro.LivroID)?
-                         ViewBag.LivrosComReserva[livro.LivroID].ToString("dd/MM/yyyy"  "nao possui reserva"))</td>
+                    @* <td data-cell="data devol.">@(ViewBag.LivrosComReserva.ConteinsKey(livro.LivroID)?
+                         ViewBag.LivrosComReserva[livro.LivroID].ToString("dd/MM/yyyy"  "nao possui reserva"))</td> *@
                     <td class="icon" data-cell="editar"><a class="navbar-item"><img style="width: 40px;"
                                 src="~/images/editar.svg" alt=""></a></td>
                     <td class="icon" data-cell="detalhes"><a class="navbar-item"><img style="width: 40px;"
